added AI singing

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,12 @@
 # Users configure this via the Secrets panel in the AI Studio UI.
 GEMINI_API_KEY="MY_GEMINI_API_KEY"
 
+# MUSICFY_API_KEY: Required for Musicfy voice/character APIs.
+MUSICFY_API_KEY="MY_MUSICFY_API_KEY"
+
+# Optional override for Musicfy API host.
+MUSICFY_BASE_URL="https://api.musicfy.lol/v1"
+
 # APP_URL: The URL where this applet is hosted.
 # AI Studio automatically injects this at runtime with the Cloud Run service URL.
 # Used for self-referential links, OAuth callbacks, and API endpoints.
