--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 GEMINI_API_KEY="MY_GEMINI_API_KEY"
 
 # MUSICFY_API_KEY: Required for Musicfy voice/character APIs.
-MUSICFY_API_KEY="MY_MUSICFY_API_KEY"
+MUSICFY_API_KEY="cmm6o33lf0001jy071favwx29"
 
 # Optional override for Musicfy API host.
 MUSICFY_BASE_URL="https://api.musicfy.lol/v1"
