--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,10 @@ MUSICFY_API_KEY="cmm6o33lf0001jy071favwx29"
 # Optional override for Musicfy API host.
 MUSICFY_BASE_URL="https://api.musicfy.lol/v1"
 
+# Allow insecure TLS for Musicfy requests (helps on networks with SSL inspection/self-signed cert chains).
+# Set to "false" once your machine trusts the root CA.
+MUSICFY_ALLOW_INSECURE_TLS="true"
+
 # APP_URL: The URL where this applet is hosted.
 # AI Studio automatically injects this at runtime with the Cloud Run service URL.
 # Used for self-referential links, OAuth callbacks, and API endpoints.
